# oxsfg-steel

./: .pre-commit-config.yaml  README.md  runner.py  setup.cfg
conf/: build_multi_dataset.yaml  build_multi_dataset_L7.yaml  build_multi_dataset_S2_only.yaml  build_multi_dataset_all_const.yaml  main.yaml  main_sequence.yaml
data/: oxsfg_steel.gpkg
notebooks/: 0_Download_Data.ipynb  1_Post_experiment.ipynb  2_test_inference.ipynb
oxsfg/steel/: experiment.py  main.py  main_panel.py  main_sequence.py
oxsfg/steel/datamodules/: __init__.py  panel_target_datamodule.py  sequence_datamodule.py
oxsfg/steel/datamodules/datasets/: __init__.py  panel_target.py  sequence.py
oxsfg/steel/modules/: __init__.py  cnn_module.py  gru_module.py  sobel_module.py
oxsfg/steel/modules/models/: __init__.py  cnn_encoder.py  gru_encoder.py  sobel_encoder.py
oxsfg/steel/utils/: __init__.py  basemap.py  gee.py  make_video.py  multi_worker.py  plots.py  previewers.py  utils.py
