# Using setup.cfg instead of setup.py to make our live easier
# Instructions here:
# https://setuptools.pypa.io/en/latest/userguide/declarative_config.html
# Big example here: https://github.com/pallets/flask/blob/main/setup.cfg

[metadata]
name = oxsfg-steel
version = attr: oxsfg.steel.__version__

[options]
packages = find_namespace:
python_requires = >= 3.8
zip_safe = False
install_requires =
    geopandas
    rasterio
    google-cloud-storage
    matplotlib
    joblib
    pyyaml
    tqdm
    # An example of a GitHub dependency:
    # oxeo-water @ git+ssh://git@github.com/oxfordeo/oxeo-water.git

[options.packages.find]
include = oxsfg.*

[options.extras_require]
dev =
    pre-commit
    black
    pytest
    mypy
    tox

[options.entry_points]
# This is an example:
console_scripts =
#     command = oxsfg.steel.main:run_model

[tox:tox]
envlist = py39
skipsdist = true

[testenv]
install_command = pip install {opts} {packages}
basepython = python3.9
setenv =
  PYTHONPATH=.
deps =
    .[dev]
    mypy
commands =
    pytest
    mypy {posargs:oxeo}

[tool.black]
line-length = 88
include = '\.pyi?$'
exclude = .git,.hg,.mypy_cache,.tox,.venv,_build,buck-out,build,dist

[flake8]
max-line-length = 88
exclude = .tox,.eggs,ci/templates,build,dist, __init__.py
ignore=E741,F403,E265,W504,E226,W503,E501,E203

[tool:pytest]
norecursedirs =
    migrations

python_files =
    test_*.py
    *_test.py
    tests.py
addopts =
    -ra
    --strict-markers
    --doctest-modules
    --doctest-glob=\*.rst
    --tb=short
testpaths =
    tests

[tool:isort]
profile=black
known_first_party = oxsfg
skip = .tox,.eggs,ci/templates,build,dist

[mypy]
ignore_missing_imports = True
pretty = True
show_error_codes = True
show_error_context = True
show_traceback = True
